--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -1,13 +1,42 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="pl.com.januszpol.qnotes.Presentation.CreateNoteFragment">
+    android:id="@+id/GridLayout1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:columnCount="1"
+    android:rowCount="4"
+    android:orientation="horizontal"
+    tools:context="pl.com.januszpol.qnotes.Presentation.CreateNoteFragment" >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Tutaj dodawanie notatki" />
+    <EditText
+        android:id="@+id/editText5"
+        android:layout_width="289dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/editText6"
+        android:layout_width="279dp"
+        android:layout_height="174dp"
+        android:layout_column="0"
+        android:layout_row="3"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:text="tresc" />
+
+    <EditText
+        android:id="@+id/editText7"
+        android:layout_width="277dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="date"
+        android:text="data" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="277dp"
+        android:layout_height="wrap_content"
+        android:text="Zapisz" />
+</GridLayout>
