Note added id; NoteService changed

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,11 +10,10 @@
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
-        android:layout_width="368dp"
         android:name="BlankFragment"
-        android:layout_height="350dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp">
-    </FrameLayout>
+        android:layout_width="361dp"
+        android:layout_height="487dp"
+        tools:layout_editor_absoluteX="13dp"
+        tools:layout_editor_absoluteY="11dp"></FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
