--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -6,36 +6,40 @@
     android:columnCount="1"
     android:rowCount="4"
     android:orientation="horizontal"
-    tools:context="pl.com.januszpol.qnotes.Presentation.CreateNoteFragment" >
+    tools:context="pl.com.januszpol.qnotes.Presentation.NoteCreate.CreateNoteFragment" >
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/topic"
         android:layout_width="289dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="Tytuł" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/description"
         android:layout_width="279dp"
         android:layout_height="174dp"
         android:layout_column="0"
         android:layout_row="3"
         android:ems="10"
         android:inputType="textMultiLine"
-        android:text="tresc" />
-
-    <EditText
-        android:id="@+id/editText7"
-        android:layout_width="277dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="date"
-        android:text="data" />
+        android:text="Treść" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/create_notification"
+        android:layout_width="277dp"
+        android:layout_height="wrap_content"
+        android:text="Dodaj powiadomienie" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/data_list"
+        />
+
+    <Button
+        android:id="@+id/create_note"
         android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:text="Zapisz" />
