--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -1,16 +1,16 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/GridLayout1"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:columnCount="1"
-    android:rowCount="4"
     android:orientation="horizontal"
-    tools:context="pl.com.januszpol.qnotes.Presentation.NoteCreate.CreateNoteFragment" >
+    android:rowCount="4"
+    tools:context="pl.com.januszpol.qnotes.Presentation.NoteCreate.CreateNoteFragment">
 
     <EditText
         android:id="@+id/topic"
-        android:layout_width="289dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
@@ -18,7 +18,7 @@
 
     <EditText
         android:id="@+id/description"
-        android:layout_width="279dp"
+        android:layout_width="match_parent"
         android:layout_height="174dp"
         android:layout_column="0"
         android:layout_row="3"
@@ -28,19 +28,18 @@
 
     <Button
         android:id="@+id/create_notification"
-        android:layout_width="277dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Dodaj powiadomienie" />
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/data_list"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <Button
         android:id="@+id/create_note"
-        android:layout_width="277dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Zapisz" />
 </GridLayout>
