Working on edditing note

--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -6,7 +6,7 @@
     android:columnCount="1"
     android:orientation="horizontal"
     android:rowCount="4"
-    tools:context="pl.com.januszpol.qnotes.Presentation.NoteCreate.EditNoteFragment">
+    tools:context="pl.com.januszpol.qnotes.Presentation.NoteEdit.EditNoteFragment">
 
     <EditText
         android:id="@+id/topic_edit"
