--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorRed">#ffcc0000</color>
+    <color name="colorGreen">#ff669900</color>,
+    <color name="colorOrange">#ffff8800</color>
 </resources>
